--- a/src/components/css/footer.css
+++ b/src/components/css/footer.css
@@ -1,5 +1,5 @@
 .app__footer{
-    background-color: #E9E0E0;
+    background-color: var(--secondary);
     height: 80px;
     font-family: poppins;
     padding-top: 4vh;
