--- a/src/components/css/feature.css
+++ b/src/components/css/feature.css
@@ -6,8 +6,8 @@
 }
 .feature_title{
     font-size: 40px;
-    font-weight: 100;
     font-family: poppins;
+    color: var(--nav);
     margin-bottom: 7vh;
 }
 .feature__item{
