--- a/src/components/css/info.css
+++ b/src/components/css/info.css
@@ -22,7 +22,7 @@ span{
 .title{
     font-weight: bold;
 }
-.card{
+.card1{
     height: 40vh;
     box-shadow: 0px 1px 14px 1px lightgray;
     display: flex;
@@ -30,7 +30,7 @@ span{
     align-items: center;
     margin-bottom: 3vh;
 }
-.card:hover{
+.card1:hover{
     background: var(--card);
     transition: 1s;cursor: pointer;
     color: var(--white);
