added a navbar scroll functionality

--- a/src/components/css/hero.css
+++ b/src/components/css/hero.css
@@ -2,9 +2,9 @@
     font-family: poppins;
     margin-bottom: 14vh;
 }
-.navbar{
+/* .navbar{
     margin-bottom: 4vh;
-}
+} */
 .navbar-brand{
     font-weight: bolder;
     color: var(--nav);
