--- a/src/components/css/hero.css
+++ b/src/components/css/hero.css
@@ -19,7 +19,16 @@
 .text{
     margin-left: 4vh;
     font-weight: 100;
+    /* font-family: Nunito; */
 }
 .right{
     margin-right: 10vh;
+}
+.book1{
+    background: var(--card);
+    color: white;
+    margin-left: 24px;
+    text-transform: uppercase;
+    font-size: 10px;
+    padding: 17px;
 }
