added dynamic cart content to the dropdown

--- a/src/components/css/detail.css
+++ b/src/components/css/detail.css
@@ -84,3 +84,17 @@ th{
     height: 200px;
     width: 100%;
 }
+.top{
+    margin-top: 4vh;
+    margin-bottom: 4vh;
+}
+.top > h6{
+    margin-right: 10vh;
+}
+.viewCartBtn{
+    background: var(--card);
+    color: white;
+}
+.viewCartBtn:hover{
+    color: white;
+}
