--- a/src/components/css/detail.css
+++ b/src/components/css/detail.css
@@ -26,6 +26,16 @@
     padding-top: 10px;
     padding-bottom: 10px;
 }
+.btn3{
+    background: var(--black);
+    border-radius: 4px;
+    color: var(--white);
+    color: var(--white);
+    border: none;
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
 .book__card{
     background: var(--white);
     padding: 24px;
