created a customized sidebar

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
   --secondary: #EEF5FB;
   --works: #879DB2;
 }
-.navbar-brand{
+/* .navbar-brand{
   font-family: poppins;
 }
 .nav-link{
@@ -34,4 +34,4 @@
 }
 .app__navbar{
   margin-bottom: 17vh;
-}
+} */
