--- a/src/components/css/checkout.css
+++ b/src/components/css/checkout.css
@@ -18,3 +18,10 @@
 .form-control:focus{
     box-shadow: none;
 }
+.step1Btn{
+    background: var(--card);
+    border: none;
+    color: white;
+    width: 100%;
+    border-radius: 10px;
+}
