--- a/src/components/css/checkout.css
+++ b/src/components/css/checkout.css
@@ -25,3 +25,11 @@
     width: 100%;
     border-radius: 10px;
 }
+.step2Btn{
+    background: var(--card);
+    border: none;
+    color: white;
+    border-radius: 4px;
+    width: 10%;
+    margin: 2px;
+}
