--- a/src/components/css/checkout.css
+++ b/src/components/css/checkout.css
@@ -18,18 +18,29 @@
 .form-control:focus{
     box-shadow: none;
 }
+.first{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
 .step1Btn{
     background: var(--card);
     border: none;
     color: white;
-    width: 100%;
-    border-radius: 10px;
+    width: 40%;
+    margin: auto;
+    height: 30px;
+    border-radius: 3px;
 }
 .step2Btn{
     background: var(--card);
     border: none;
     color: white;
     border-radius: 4px;
-    width: 10%;
+    width: 30%;
+    height: 30px;
     margin: 2px;
+}
+.stepper{
+    background: green !important;
 }
