--- a/src/components/css/summary.css
+++ b/src/components/css/summary.css
@@ -8,6 +8,11 @@
 .leftSummary{
     border-right: 1px solid lightgray;
 }
-.centerSummary{
-    border-right: 1px solid lightgray;
+.payment{
+    background: var(--card);
+    color: white;
+    width: 100%;
+}
+.payment:hover{
+    color: white;
 }
